<resources>
    <string name="app_name">MerchantLauncher</string>
    <string name="all_apps">All Apps</string>

    <string name="call_dolfin">ติดต่อศูนย์บริการร้านค้า Dolfin</string>
    <string name="call_dolfin_tel">02&#8211;255&#8211;9222</string>
    <string name="call_dolfin_date">สามารถติดต่อได้ทุกวัน\nเวลา 10:00 &#8211; 22:00</string>

    <string name="update_p1">อัพเดท</string>
    <string name="update_schedule">อัพเดทรอบถัดไป</string>
    <string name="no_update_schedule">ไม่มีอัพเดท</string>
    <string name="update_lastest">Finpoint ในเครื่องเป็นเวอร์ชั่นล่าสุดแล้ว</string>
    <string name="version">เวอร์ชั่น :</string>
    <string name="not_installed">คุณยังไม่ได้ติดตั้งFinpoint</string>
    <string name="keep_turnon">โปรดเปิดเครื่องไว้ตลอดการอัพเดท</string>
    <string name="check_for_update"><u>ตรวจสอบอัพเดท</u></string>
    <string name="if_not_auto">หากไม่สามารถอัพเดทได้อัตโนมัติหรือFinpointยังคงเป็นเวอร์ชั่นเก่า โปรดอัพเดทได้ที่ Appstore หรือติดต่อศูนย์บริการร้านค้า Dolfin</string>
    <string name="message">ข้อความ</string>
    <string name="message_default">ไม่มีข้อความในขณะนี้</string>

    <string name="dialog_new_update">มีอัพเดท Finpoint เวอร์ชั่นใหม่</string>
    <string name="dialog_new_update_description">สามารถอัพเดทเวอร์ชั่นใหม่ได้ที่ App Store หากไม่สามารถอัพเดทอัตโนมัติได้</string>
    <string name="dialog_not_install">คุณยังไม่ได้ติดตั้ง Finpoint</string>
    <string name="dialog_not_install_description">กรุณาดาวโหลด Finpoint ได้ที่ App Store</string>
    <string name="open_app_store">เปิด App Store</string>
    <string name="cancel">ยกเลิก</string>

    <string name="no_item">ไม่มีแอปพลิเคชั่นที่แสดงอยู่ในขณะนี้</string>
    <string name="no_item_description">โปรดเชื่อมต่ออินเตอร์เน็ตใหม่ หรือติดต่อศูนย์บริการร้านค้า Dolfin</string>

    <string name="cannot_load">ไม่สามารถดาวโหลดข้อมูลได้</string>
    <string name="try_again">ลองอีกครั้ง</string>
</resources>
