<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        tools:context=".Information.CallCenterFragment"
        android:padding="25dp">
    <ImageView
            android:src="@drawable/ic_call_black_24dp"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:visibility="visible" android:contentDescription="@string/app_name"/>
    <TextView
            android:text="@string/call_dolfin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView" android:textColor="@android:color/white"
            android:textSize="18sp" android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:fontFamily="@font/font_the1_bold" app:layout_constraintStart_toEndOf="@+id/imageView"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="@+id/imageView"/>
    <TextView
            android:text="@string/call_dolfin_tel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintStart_toStartOf="@+id/textView"
            android:layout_marginTop="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.0"
            android:textColor="@android:color/white" android:fontFamily="@font/font_the1_regular"
            android:textSize="18sp"/>
    <TextView
            android:text="@string/call_dolfin_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView2" app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="@+id/textView2" app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="16dp" android:textColor="@android:color/white"
            android:fontFamily="@font/font_the1_regular"/>
</androidx.constraintlayout.widget.ConstraintLayout>