<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Information.OtherFragment"
        android:background="@color/colorPrimaryDark"
        android:padding="25dp">
    <TextView
            android:text="@string/update_p1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView3" android:textColor="@android:color/white"
            android:textSize="18sp" android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:fontFamily="@font/font_the1_bold"
            app:layout_constraintStart_toEndOf="@+id/imageView2" android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="@+id/imageView2"
            android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"/>
    <ImageView
            android:src="@drawable/ic_update_black_24dp"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/imageView2"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
    />
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/textView3" app:layout_constraintEnd_toEndOf="@+id/textView3"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView3"
            android:id="@+id/check_version_layout">
        <TextView
                android:text="@string/update_lastest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/check_version_tv"
                android:textColor="@android:color/white"
                android:textSize="14sp" android:fontFamily="@font/font_the1_regular"
        />
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:id="@+id/version_layout">
            <TextView
                    android:text="@string/version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/version_tv"
                    android:textColor="@android:color/white"
                    android:fontFamily="@font/font_the1_regular"
                    android:layout_marginEnd="10dp"
            />
            <TextView
                    android:text="VERSION CODE"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/version_code_tv"
                    android:textColor="@android:color/white"
                    android:fontFamily="@font/font_the1_regular"/>
        </LinearLayout>
    </LinearLayout>
    <ImageView
            android:src="@drawable/ic_event_note_black_24dp"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/imageView3"
            app:layout_constraintStart_toStartOf="@+id/imageView2"
            android:layout_marginTop="100dp" app:layout_constraintTop_toBottomOf="@+id/imageView2"/>
    <TextView
            android:text="@string/update_schedule"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView9" app:layout_constraintStart_toEndOf="@+id/imageView3"
            android:layout_marginStart="16dp" app:layout_constraintTop_toTopOf="@+id/imageView3"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:textSize="18sp"
            android:fontFamily="@font/font_the1_bold" android:textColor="@android:color/white"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView9" app:layout_constraintEnd_toEndOf="@+id/textView9"
            app:layout_constraintStart_toStartOf="@+id/textView9">
        <TextView
                android:text="@string/no_update_schedule"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView10"
                android:textColor="@android:color/white" android:fontFamily="@font/font_the1_regular"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>